# simple_neural_network

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  neural_network_test
header/: acfunc.h  cu.h  mytraining.h  nnbp.h
source/: acfunc.cpp  cu.cpp  main.cpp  mytraining.cpp  nnbp.cpp
